# uniffi-bindgen-go

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.sh  build_bindings.sh  docker_test_bindings.sh  test_bindings.sh  uniffi-test-fixtures.toml
.github/workflows/: rust.yml
bindgen/: Cargo.toml  askama.toml
bindgen/src/: lib.rs  main.rs
bindgen/src/gen_go/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  error.rs  executor.rs  external.rs  filters.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs
bindgen/templates/: Async.go  AsyncTypesTemplate.go  BinaryRead.go  BinaryWrite.go  BooleanHelper.go  BridgingCTemplate.c  BridgingHeaderTemplate.h  BytesHelper.go  CallbackHelpers.go  CallbackInterfaceRuntime.go  CallbackInterfaceTemplate.go  CustomTypeTemplate.go  DestroyTemplate.go  DurationHelper.go  EnumTemplate.go  ErrorTemplate.go  ExternalTemplate.go  FfiConverterTemplate.go  Float32Helper.go  Float64Helper.go  ForeignExecutorTemplate.go  Helpers.go  Int16Helper.go  Int32Helper.go  Int64Helper.go  Int8Helper.go  MapTemplate.go  NamespaceLibraryTemplate.go  ObjectRuntime.go  ObjectTemplate.go  OptionalTemplate.go  RecordTemplate.go  RustBufferTemplate.go  SequenceTemplate.go  StringHelper.go  TimestampHelper.go  TopLevelFunctionTemplate.go  TraitMethods.go  Types.go  UInt16Helper.go  (+7 more)
binding_tests/: .envrc  arithmetic_test.go  binding_tests.go  callbacks_test.go  chronological_test.go  coverall_test.go  custom_types_test.go  destroy_test.go  docstring_test.go  empty_string_and_bytes_test.go  error_types_test.go  errors_test.go  example_futures_test.go  ext_types_test.go  fixture_callbacks_test.go  foreign_executor_test.go  futures_test.go  geometry_test.go  go.mod  issue43_test.go  issue45_test.go  large_enum_test.go  name_case_test.go  objects_test.go  proc_macro_test.go  rondpoint_test.go  simple_fns_test.go  simple_iface_test.go  sprites_test.go  todolist_test.go  trait_methods_test.go  traits_test.go  type_limits_test.go
docs/: CONFIGURATION.md  RELEASE.md
fixtures/: Cargo.toml  uniffi.toml
fixtures/destroy/: Cargo.toml  build.rs
fixtures/destroy/src/: destroy.udl  lib.rs
fixtures/empty_string_and_bytes/: Cargo.toml  build.rs
fixtures/empty_string_and_bytes/src/: empty_string_and_bytes.udl  lib.rs
fixtures/errors/: Cargo.toml  build.rs
fixtures/errors/src/: errors.udl  lib.rs
fixtures/futures/src/: lib.rs
fixtures/name-case/: Cargo.toml  README.md  build.rs
fixtures/name-case/src/: lib.rs  name-case.udl
fixtures/objects/: Cargo.toml  build.rs
fixtures/objects/src/: lib.rs  objects.udl
fixtures/regressions/issue43/: Cargo.toml  build.rs
fixtures/regressions/issue43/src/: issue43.udl  lib.rs
fixtures/regressions/issue45/: Cargo.toml  build.rs
fixtures/regressions/issue45/src/: issue45.udl  lib.rs
fixtures/src/: lib.rs
