[workspace]
resolver = "2"
members = [
    "bindgen",
    "fixtures",
    "fixtures/errors",
    "fixtures/destroy",
    "fixtures/objects",
    "fixtures/name-case",
    "fixtures/regressions/*"
]

[workspace.dependencies]
uniffi = "0.29.4"
uniffi_testing = "0.29.4"
uniffi_macros = "0.29.4"
uniffi_build = { version = "0.29.4", features=["builtin-bindgen"] }
uniffi_bindgen = "0.29.4"
uniffi_meta = "0.29.4"
uniffi_udl = "0.29.4"
