[package]
name = "uniffi-bindgen-go"
version = "0.2.2+v0.25.0"
edition = "2021"

[lib]
name = "uniffi_bindgen_go"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-go"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.12", default-features = false, features = ["config"] }
clap = { version = "4", features = ["cargo", "std", "derive"] }
extend = "1.1"
heck = "0.5"
cargo_metadata = "0.15"
serde = "1"
toml = "0.5"
camino = "1.0.8"
fs-err = "2.7.0"
paste = "1.0"
serde_json = "1.0.0"
textwrap = "0.16"

uniffi_bindgen.workspace = true
uniffi_meta.workspace = true
uniffi_udl.workspace = true
