[package]
name = "uniffi-bindgen-go-fixtures"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_fixtures"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
uniffi-example-arithmetic = { path = "../3rd-party/uniffi-rs/examples/arithmetic" }
uniffi-example-callbacks = { path = "../3rd-party/uniffi-rs/examples/callbacks" }
uniffi-example-custom-types = { path = "../3rd-party/uniffi-rs/examples/custom-types" }
uniffi-example-geometry = { path = "../3rd-party/uniffi-rs/examples/geometry/" }
uniffi-example-rondpoint = { path = "../3rd-party/uniffi-rs/examples/rondpoint" }
uniffi-example-sprites = { path = "../3rd-party/uniffi-rs/examples/sprites" }
uniffi-example-todolist = { path = "../3rd-party/uniffi-rs/examples/todolist" }
uniffi-fixture-callbacks = { path = "../3rd-party/uniffi-rs/fixtures/callbacks" }
uniffi-fixture-coverall = { path = "../3rd-party/uniffi-rs/fixtures/coverall" }
uniffi-fixture-type-limits = { path = "../3rd-party/uniffi-rs/fixtures/type-limits" }
uniffi-fixture-time = { path = "../3rd-party/uniffi-rs/fixtures/uniffi-fixture-time" }
uniffi-go-fixture-errors = { path = "errors" }
uniffi-go-fixture-destroy = { path = "destroy" }
uniffi-go-fixture-objects = { path = "objects" }

