[package]
name = "uniffi-go-fixture-destroy"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_destroy"

[dependencies]
uniffi_macros = {path = "../../../uniffi-rs/uniffi_macros"}
uniffi = {path = "../../../uniffi-rs/uniffi"}
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = {path = "../../../uniffi-rs/uniffi_build"}
