[package]
name = "uniffi-go-fixture-errors"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_errors"

[dependencies]
thiserror = "1.0"
uniffi = {path = "../../../uniffi-rs/uniffi"}
uniffi_macros = {path = "../../../uniffi-rs/uniffi_macros"}

[build-dependencies]
uniffi_build = {path = "../../../uniffi-rs/uniffi_build", features=["builtin-bindgen"]}
