[package]
name = "uniffi-go-fixture-errors"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_errors"

[dependencies]
thiserror = "1.0"

uniffi.workspace = true
uniffi_macros.workspace = true

[build-dependencies]
uniffi_build.workspace = true
