[package]
name = "uniffi-go-fixture-name-case"
version = "0.22.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_go_name_case"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = "1.0"

uniffi.workspace = true

[build-dependencies]
uniffi = {workspace = true, features = ["build"] }

[dev-dependencies]
glob = "0.3"

uniffi = { workspace = true, features = ["bindgen-tests"] }
uniffi_bindgen.workspace = true
uniffi_testing.workspace = true
