[package]
name = "uniffi-go-fixture-objects"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_objects"

[dependencies]
crossbeam = "0.8.2"
once_cell = "1.12"
thiserror = "1.0"
uniffi = {path = "../../3rd-party/uniffi-rs/uniffi"}
uniffi_macros = {path = "../../3rd-party/uniffi-rs/uniffi_macros"}

[build-dependencies]
uniffi_build = {path = "../../3rd-party/uniffi-rs/uniffi_build", features=["builtin-bindgen"]}
