[package]
name = "uniffi-go-fixture-objects"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_objects"

[dependencies]
crossbeam = "0.8.2"
once_cell = "1.12"
thiserror = "1.0"
tokio = { version = "1.44", features = ["rt", "time"] }

uniffi = { workspace = true, features = ["tokio"] }
uniffi_macros.workspace = true

[build-dependencies]
uniffi_build.workspace = true
