[package]
name = "uniffi-go-fixture-issue43"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_go_issue43"

[dependencies]
uniffi.workspace = true
uniffi_macros.workspace = true
uniffi-go-fixture-issue45 = {path = "../issue45"}

[build-dependencies]
uniffi_build.workspace = true
